# rock-paper-sync

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DOCUMENTATION.md  README.md  TESTING.md  TEST_COMPLETION_SUMMARY.md  TEST_COVERAGE_ANALYSIS.md  TEST_DELETION_ANALYSIS.md  coverage.json  dvc.yaml  example_config.toml  pyproject.toml  secrets.env.example  vulture_whitelist.txt
.claude/agents/: architecture-reviewer.md  remarkable-format-expert.md
.github/workflows/: lint-and-type-check.yml  tests.yml
docker/ocr/: Containerfile  README.md  requirements.txt
docker/ocr-minimal/: Containerfile  README.md  requirements.txt
docs/: ANNOTATION_ARCHITECTURE_REVIEW.md  ANNOTATION_ARCHITECTURE_V2.md  ARCHITECTURE.md  DPI_FIX_IMPACT_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  LAYOUT_PRINCIPLES.md  LAYOUT_SPEC.md  LAYOUT_TESTBENCH_PLAN.md  LAYOUT_VERIFICATION_PLAN.md  MULTI_VAULT.md  OCR_SYSTEM.md  PRODUCT_ROADMAP.md  RECORD_REPLAY_FRAMEWORK.md  RENDERER_COORDINATE_MODEL.md  REQUIREMENTS.md  RMSCENE_FINDINGS.md  RMSCENE_NEWLINE_WORKAROUND.md  STROKE_ANCHORING.md  SUB_AGENTS.md  SYNC_PROTOCOL.md  TASKS.md  TEST_TODO.md  TODO.md
docs/archive/: COORDINATE_CALIBRATION_RESULTS.md  COORDINATE_SYSTEMS.md  COORDINATE_SYSTEM_SUMMARY.md  FONT_LAYOUT_REFACTORING.md  FONT_LAYOUT_REFACTORING_V2.md  FONT_SIZE_DISCOVERY.md  README.md
docs/bugs/: CROSS_PAGE_ANCHOR_BUG.md
src/rm_obsidian_sync/: __init__.py  cli.py  config.py  converter.py  generator.py  logging_setup.py  parser.py  rm_filesystem.py  state.py  watcher.py
src/rock_paper_sync/: __init__.py  annotation_mapper.py  annotation_markers_v2.py  annotation_renderer.py  annotation_sync_helper.py  annotations.py  audit.py  change_detector.py  cli.py  config.py  converter.py  coordinate_transformer.py  coordinates.py  crdt_format.py  font_metrics.py  generator.py  hashing.py  logging_setup.py  markdown_reconstruction.py  metadata.py  parser.py  pull_sync.py  rm_cloud_client.py  rm_cloud_sync.py  rm_file_extractor.py  rm_filesystem.py  state.py  sync_v3.py  virtual_state.py  watcher.py
src/rock_paper_sync/annotations/: INTERFACES.md  README.md  __init__.py  core_types.py  document_model.py  merging.py  ocr_corrections.py  preserver.py  scene_graph.py  stroke.py  stroke_cluster.py
src/rock_paper_sync/layout/: __init__.py  (+5 more)
tests/: README.md  TEST_SUMMARY.md  __init__.py  config_helpers.py  conftest.py  docker-compose.yml  test_annotation_integration.py  test_annotation_renderer.py  test_cli.py  test_config.py  test_converter.py  test_coordinate_round_trip.py  test_coordinates.py  test_folder_deletion.py  test_generator.py  test_integration.py  test_metadata.py  test_multi_vault_config.py  test_ocr.py  test_ocr_testdata.py  test_paragraph_mapper.py  test_parser.py  test_pull_sync.py  test_rm_file_extractor.py  test_roundtrip.py  test_state.py  test_sync_v3.py  test_transform.py  test_watcher.py
tests/annotations/: test_anchors.py  test_annotation_anchoring.py  test_annotation_hashing.py  test_annotation_integration.py  test_annotation_markers.py  test_annotation_preservation.py  test_annotations.py  test_coordinate_transformer.py  test_crdt_service.py  test_cross_page_routing.py  test_cross_page_scene_graph.py  test_handler_mapping.py  test_hidden_layer.py  test_markdown_extraction.py  test_merging.py  test_ocr_corrections.py  test_orphan_triage.py  test_processor.py  test_scene_adapter.py  test_scene_graph_validity.py  test_snapshots.py  test_spatial.py  test_stroke_abstractions.py  test_tree_node_anchor_validity.py
tests/calibration/: __init__.py  test_qt_reference.py
tests/device_bench/: .gitignore  bench.py  conftest.py  diagnose_clustering.py  docker-compose.yml  run_device_tests.py  test_folder_deletion.py  test_folder_deletion_capture.py  test_folder_deletion_device.py  test_offline_replay.py  transform_tester.py
tests/layout/: __init__.py  test_corpus_differential.py  test_corpus_extract.py  test_engine_invariants.py
tests/ocr/: test_ocr.py  test_ocr_testdata.py
tests/parser_generator/: test_converter.py  test_generator.py  test_metadata.py  test_paragraph_mapper.py  test_parser.py
tests/record_replay/: GOLDEN_FILES.md  README.md  RECORDING_GUIDE.md  bench.py  conftest.py  run_device_tests.py  test_anchor_shift.py  test_annotation_after_modification.py  test_calibration.py  test_comprehensive_highlights.py  test_comprehensive_strokes.py  test_conflicting_edit.py  test_cross_page_reanchor.py  test_folder_deletion_capture.py  test_folder_deletion_device.py  test_font_calibration.py  test_formatting_verification.py  test_full_integration.py  test_hidden_layer_orphans.py  test_highlight_anchoring.py  test_highlight_anchors.py  test_highlight_reanchor.py  test_highlights.py  test_markdown_modifications.py  test_multi_trip.py  test_ocr_correction_workflow.py  test_ocr_handwriting.py  test_ocr_integration.py  test_ocr_local_service.py  test_offline_annotation_replay.py  test_offline_replay.py  test_orphan_and_recovery.py  test_paragraph_pagination.py  test_pen_colors.py  test_pen_tools.py  test_pen_widths.py  test_stroke_anchors.py  test_stroke_reanchor.py  test_three_way_merge.py  test_visual_comparison.py
tests/rmlib/: __init__.py  test_device_golden.py  test_renderer.py
tests/service/: test_cli.py  test_config.py  test_watcher.py
tests/sync/: test_folder_deletion.py  test_reproduce_issues.py  test_rm_cloud_sync.py  test_roundtrip.py  test_sync_integration.py  test_sync_v3.py  test_virtual_state.py
tools/analysis/: anchor_diagnostic.py  compare_rm_visual.py  create_renderer_test_case.py  device_capture.py  device_iteration.py  diagnose_clustering.py  download_rm_by_name.py  rm_inspector.py  rm_to_png.py  stroke_visualizer.py  transform_tester.py
tools/calibration/: __init__.py  analyze_font_size.py  extract_profile.py  generate_geometry_calibration.py  generate_wrap_calibration.py  inspect_rm_file.py  qt_layout_reference.py  record_corpus.py
tools/rmlib/: __init__.py  capture.py  colors.py  renderer.py  tracer.py  validator.py
(+494 files in other folders)
