[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rock-paper-sync"
version = "0.1.0"
description = "Sync Obsidian markdown files to reMarkable Paper Pro"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "AGPL-3.0-or-later"}
authors = [
    {name = "Your Name", email = "your@email.com"}
]
keywords = ["remarkable", "obsidian", "markdown", "sync"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Utilities",
]
dependencies = [
    "rmscene>=0.7.0",
    "watchdog>=3.0.0",
    "mistune>=3.0.0",
    "click>=8.0.0",
    "pyyaml>=6.0.0",
    "requests>=2.31.0",
    "httpx>=0.28.1",
    "pyarrow>=17.0.0",
    "pillow>=10.0.0",
    "imagehash>=4.3.1",
    "runpod>=1.8.1",
    "diff-match-patch>=20230430",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "types-PyYAML>=6.0.0",
]
calibration = [
    "PyQt6>=6.0",
]

[project.scripts]
rock-paper-sync = "rock_paper_sync.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/rock-paper-sync"
Repository = "https://github.com/yourusername/rock-paper-sync"
Issues = "https://github.com/yourusername/rock-paper-sync/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["tools/", "docker/"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
tmp_path_retention_count = 50
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["rock_paper_sync"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ty.src]
include = ["src"]
exclude = ["tools/"]

[tool.vulture]
paths = ["src/rock_paper_sync"]
min_confidence = 80

[dependency-groups]
dev = [
    "fonttools>=4.61.0",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-docker>=3.2.5",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.5",
    "ty>=0.0.1a28",
    "vulture>=2.14",
    "cairosvg>=2.7",
]
